# moteus-rs

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
examples/: _logging.rs  simple.rs  trajectory_test.rs
src/: bus.rs  error.rs  frame.rs  lib.rs
src/protocol/: frame.rs  mod.rs  register_macros.rs  registers.rs
src/transport/: fdcanusb.rs  mod.rs
