[package]
name = "moteus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
serial2 = "0.2.19"
fdcanusb = { path = '../fdcanusb-rs' }
byteorder = "1.5.0"
zerocopy = { version = "0.7.32", features = ["derive"] }
num-traits = "0.2.18"
num-derive = "0.4.2"
log = "0.4.20"
itertools = "0.12.1"
env_logger = "0.10.2"
chrono = "0.4.35"