[package]
name = "moteus"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/omelia-iliffe/moteus-rs"
description = "Rust library for interfacing with Moteus controllers"

[dependencies]
hex = "0.4.3"
fdcanusb = { version = "0.5.0", default-features = false }
byteorder = "1.5.0"
zerocopy = { version = "0.7.32", features = ["derive"] }
num-traits = "0.2.18"
num-derive = "0.4.2"
log = "0.4.21"
itertools = "0.13.0"
env_logger = "0.11.3"
chrono = "0.4.35"
thiserror = "1.0.63"

[features]
default = ["serial2"]
serial2 = ["fdcanusb/serial2"]
